--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@
     box-shadow: 0 2px 10px rgb(85, 85, 85);
     margin-bottom: 40px;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     z-index: 1000;
     }
     
@@ -261,7 +261,11 @@
     text-decoration: underline;
     color: var(--color-bg-bright-blue);
     }
-    
+
+    img {
+        width: 40%;
+        text-align: center;
+    }
     
     .business-options .line-spacing {
     border: 1px solid var(--color-light-grey);
