--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@
     box-shadow: 0 2px 10px rgb(85, 85, 85);
     margin-bottom: 40px;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     z-index: 1000;
     }
     
@@ -198,6 +198,7 @@
     
     /* main */
     main {
+        text-align: center;
     }
     
     /* jumbo */
@@ -284,3 +285,4 @@
     padding-top: 40px;
     border-top: 2px solid blue;
     }
+
